z-index bug

--- a/jdmobile/css/main.css
+++ b/jdmobile/css/main.css
@@ -611,6 +611,7 @@ main {
 	height: 4rem;
 	font-size: 0;
 	background-color: #fff;
+	z-index: 999;
 }
 
 #menu a {
